--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/alex632/kq#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "json2csv": "^5.0.5",
+    "silly-datetime": "^0.1.2",
     "sqlite3": "^5.0.1"
   }
 }
